--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "googleapis": "^171.4.0"
   }
 }
